modules/traefik/monitoring.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik-system
  name: traefik-metrics
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      name: http
      port: 9100
